--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js",
+    "start": "node app.js",
     "start:dev": "nodemon app.js"
   },
   "repository": {
@@ -31,7 +31,6 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
-    "npm": "^6.14.8",
-    "razorpay": "^2.8.2"
+    "npm": "^9.8.1"
   }
 }
